--- a/app/css/app/_groups.scss
+++ b/app/css/app/_groups.scss
@@ -112,7 +112,7 @@
 
           position: absolute;
           top: 10px; right: 10px;
-          z-index: 100;
+          z-index: 2;
 
           padding: 0 0.5em;
           font-size: 0.8em;
